--- a/project2/Dockerfile
+++ b/project2/Dockerfile
@@ -7,7 +7,8 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Копируем .env, main.py и запускаем
-COPY .env .                 # ← Копируем .env
+COPY .env .
 COPY main.py .
 
 CMD ["python", "main.py"]
+EOF
